--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="top">
         <div class="txt">
             <marquee behavior="left" direction="left">Welcome to Learnflix Website! Your learning Partner.
-                Collage.</marquee>
+                </marquee>
         </div>
     </header>
     <nav class="nav">
